fix input text align

--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -3,14 +3,13 @@
   font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
-  text-align: center;
+  text-align: left;
   padding: 14px;
   border: none;
 
   &::placeholder {
     color: #393939;
     opacity: 0.5;
-    text-align: left;
   }
 
   &_textarea {
